# squinia-backend

./: .coverage  .dockerignore  .gitignore  AGENT.md  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini
.github/workflows/: deploy-backend.yml
alembic/: env.py
alembic/versions/: 2026_04_18_1833-8356680abc46_create_auth_tables.py  2026_04_18_1847-7b32004dbf6c_add_auth_schema_tables.py  2026_04_20_1018-e3b4c92cf967_add_simulation_domain_tables.py  2026_04_20_1252-feccfb30f615_add_assignments_deleted_at.py  2026_04_22_1200-a1b2c3d4e5f6_tenant_invites_user_onboarding.py  2026_04_26_0900-9b6d8a72f3c1_add_evaluation_score_feedback_fields.py  2026_04_26_2100-c4a91b7f2d33_add_agent_personas.py
app/: main.py
app/agents/: __init__.py  livekit_voice_agent.py
app/api/v1/: router.py
app/core/: config.py  dependencies.py  exceptions.py  internal_auth.py  logging.py  security.py  tenant_access.py
app/db/: base.py  session.py
app/integrations/email/: __init__.py  base.py  factory.py  ses.py
app/middleware/: error_handler.py  rate_limit.py
app/models/: __init__.py
app/models/auth/: __init__.py  auth_session.py  email_verification.py  membership.py  password_reset.py  tenant.py  tenant_invite.py  user.py
app/models/simulation/: __init__.py  agent_persona.py  assignment.py  assignment_submission.py  cohort.py  cohort_member.py  evaluation.py  evaluation_score.py  message.py  scenario.py  scenario_rubric_item.py  simulation_session.py
app/repositories/auth/: __init__.py  email_verification_repository.py  membership_repository.py  tenant_repository.py  (+3 more)
app/schemas/: response.py
app/services/: auth.py  auth_invite.py  auth_onboarding.py  auth_password_recovery.py  auth_verification.py  me.py  tenant_invite_mint.py  user.py  workspace_bootstrap.py
app/utils/: cache.py  tokens.py
docs/: AGENT.md  ARCHITECTURE.md  dashboard-api-handoff.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: seed_personas_and_scenarios.py
tests/: test_agent_persona_prompting.py  test_ai_observability.py  test_auth_service.py  test_livekit_voice_selection.py  test_session_transcript_ingest.py  test_text_chat_guard.py
(+65 files in other folders)
