[project]
name = "squinia-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.0.1,<4.1",
    "boto3>=1.35.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tzdata>=2026.1",
    "uvicorn[standard]>=0.44.0",
    "openai>=1.66.0",
    "openai-agents>=0.14.2",
    "livekit-api>=0.8.0",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]>=1.2.15",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.1",
    "pip>=26.0.1",
    "livekit-plugins-groq>=1.5.6",
    "livekit-plugins-cartesia>=1.5.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
